Updated readme file

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="jumbotron">
-    <h1>{{title}}</h1>
+    <h1>{{title}}🌍</h1>
     <p>Welcome to {{title}} - the ultimate task management tool!</p>
 
     {{#if user}}
