--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,7 @@
   padding-top: 70px;
   max-height: 100vh;
   font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+  max-width: 100%;
 } 
 
 a {
@@ -61,4 +62,13 @@ a {
   border: 1 solid white;
 }
 
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 50px;
+  text-align: center;
+  font-size: 18px;
+  margin-top: 150px;
+  
+}
 
